RESOLVED FIXED89211
[BlackBerry] Certain web pages (i.e., http://www.cloudtweaks.com/) are allowed to be wider than the screen
https://bugs.webkit.org/show_bug.cgi?id=89211
Summary [BlackBerry] Certain web pages (i.e., http://www.cloudtweaks.com/) are allowe...
Jacky Jiang
Reported 2012-06-15 07:39:37 PDT
Steps to Reproduce: *Open Browse *Go to http://www.cloudtweaks.com/ *Observe that the information are not fitted to the screen - able to scroll left and right, instead of just up and down Expected: *All web pages should fit in to the screen
Attachments
Patch (4.45 KB, patch)
2012-06-15 08:49 PDT, Jacky Jiang
no flags
committed, r=rwlbuis (4.50 KB, patch)
2012-06-15 08:53 PDT, Jacky Jiang
rwlbuis: review+
Jacky Jiang
Comment 1 2012-06-15 08:49:08 PDT
Jacky Jiang
Comment 2 2012-06-15 08:49:46 PDT
Comment on attachment 147828 [details] Patch Will update the internal reviewer.
Jacky Jiang
Comment 3 2012-06-15 08:53:38 PDT
Created attachment 147829 [details] committed, r=rwlbuis
Rob Buis
Comment 4 2012-06-15 09:26:06 PDT
Comment on attachment 147829 [details] committed, r=rwlbuis View in context: https://bugs.webkit.org/attachment.cgi?id=147829&action=review LGTM. > Source/WebKit/blackberry/Api/WebPage.cpp:1683 > + return zoomToFitScale < minimumZoomToFitScale ? minimumZoomToFitScale : zoomToFitScale; Using std:min is better here as it is clearer what you are doing.
Jacky Jiang
Comment 5 2012-06-15 09:33:28 PDT
Comment on attachment 147829 [details] committed, r=rwlbuis View in context: https://bugs.webkit.org/attachment.cgi?id=147829&action=review >> Source/WebKit/blackberry/Api/WebPage.cpp:1683 >> + return zoomToFitScale < minimumZoomToFitScale ? minimumZoomToFitScale : zoomToFitScale; > > Using std:min is better here as it is clearer what you are doing. Thanks for catching this! Should use std::max instead of std:min actually.
Jacky Jiang
Comment 6 2012-06-15 10:15:55 PDT
Comment on attachment 147829 [details] committed, r=rwlbuis Committed r120473: <http://trac.webkit.org/changeset/120473>.
Note You need to log in before you can comment on or make changes to this bug.